# eshop-sales-report

./: .env.example  Dockerfile  Dockerfile.dev  Makefile  README.md  hello.py  pyproject.toml  requirements.txt
app/: main.py  pre_start.py
app/api/: deps.py  http_error.py  main.py  middleware.py
app/api/routes/: health.py  sale.py  sales.py  utils.py
app/api/v1/: sales.py
app/constants/: margin.py
app/core/: config.py  db.py
app/db/: __init__.py  base.py  session.py
app/event/: consumer.py
app/migrations/: 000001_initial_migration.up.sql
app/models/: kafka_sale.py  sale.py  sales.py
app/repository/: sale.py
app/schemas/: sale.py
app/service/: sale.py
app/utils/: generate_xlsx.py  mapper.py
