[project]
name = "eshop-sales-report"
version = "0.1.0"
description = "Eshop Sales Report Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "confluent-kafka>=2.8.0",
    "fastapi>=0.115.6",
    "psycopg>=3.2.3",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "sqlmodel>=0.0.22",
    "tenacity>=9.0.0",
]
